recursion.lessons.recursion.tree.Tree.scala.error
Tree:9: error: not found: value anlge
	gauche(anlge)
               ^